# BachelorProJectSDU

./: README.md  disableAutoFocus  piShutdown.py
GPSSoftware/: GPS.c  HELP-datalog  README  test.c  test.c.old
MPU6050/: README  mpu6050  mpuCompileHelp
controller/: CMakeLists.txt  README  package.xml  package.xml.old
controller/launch/: controller.launch
controller/src/: controller.cpp  controller.cpp.old
