<?xml version="1.0"?>
<package>
  <name>controller</name>
  <version>0.0.0</version>
  <description>The control package</description>

  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rungstroem@hotmail.com">runge</maintainer>
  <license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>msgs</build_depend>
	<build_depend>opencv2</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>msgs</run_depend>
	<run_depend>opencv2</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>message_runtime</run_depend>

</package>
